feat(backend): add new access series for state expiry
